add new website from server na

--- a/xem-phim-moi/mau-ta-ac-do/index.html
+++ b/xem-phim-moi/mau-ta-ac-do/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1785,21 +1785,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bat-ma-pha-an" title="Bắt Ma Phá Án">
+          <a class="list-top-movie-link" href="/phim-moi/cau-lac-bo-kiem-chong" title="Câu Lạc Bộ Kiếm Chồng">
            <span class="status">
-            HD Vietsub + Thuyết minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bat-ma-pha-an-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-lac-bo-kiem-chong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bắt Ma Phá Án
+             Câu Lạc Bộ Kiếm Chồng
             </span>
             <span class="list-top-movie-item-en">
-             From Now On, Showtime!
+             La Lingerie
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1807,21 +1807,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/lap-trinh-vien-dang-yeu" title="Lập Trình Viên Đáng Yêu">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-phuc-tap" title="Chuyện phức tạp">
            <span class="status">
-            HD Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lap-trinh-vien-dang-yeu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-phuc-tap-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lập Trình Viên Đáng Yêu
+             Chuyện phức tạp
             </span>
             <span class="list-top-movie-item-en">
-             Cute Programmer
+             A Complicated Story
             </span>
             <span class="list-top-movie-item-view">
-             7 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1829,21 +1829,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bat-nguyet-vi-uong" title="Bát Nguyệt Vị Ương">
+          <a class="list-top-movie-link" href="/phim-moi/oxygen" title="Oxygen">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bat-nguyet-vi-uong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/oxygen-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bát Nguyệt Vị Ương
+             Oxygen
             </span>
             <span class="list-top-movie-item-en">
-             August Never Ends
+             Oxygen
             </span>
             <span class="list-top-movie-item-view">
-             5 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1851,21 +1851,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bong-de" title="Bóng Đè">
+          <a class="list-top-movie-link" href="/phim-moi/thanh-xuan-vo-dich" title="Thanh xuân vô địch">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bong-de-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-xuan-vo-dich-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bóng Đè
+             Thanh xuân vô địch
             </span>
             <span class="list-top-movie-item-en">
-             The Ancestral
+             Our Energetic Youth
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,18 +1873,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/james-and-the-giant-peach" title="James and the Giant Peach">
+          <a class="list-top-movie-link" href="/phim-moi/lam-chuyen-phan-5" title="Lắm Chuyện (Phần 5)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/james-and-the-giant-peach-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/lam-chuyen-phan-5-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             James and the Giant Peach
+             Lắm Chuyện (Phần 5)
             </span>
             <span class="list-top-movie-item-en">
-             James and the Giant Peach
+             Big Mouth (Season 5)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
