add new website from server na

--- a/xem-phim-moi/thi-the-bi-bo-roi/index.html
+++ b/xem-phim-moi/thi-the-bi-bo-roi/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             5
+             6
             </dd>
             <br/>
            </dl>
@@ -1764,7 +1764,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1785,21 +1785,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/black-as-night" title="Black as Night">
+          <a class="list-top-movie-link" href="/phim-moi/chao-mung-den-voi-lop-hoc-de-cao-thuc-luc-phan-2" title="Chào mừng đến với lớp học đề cao thực lực (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/black-as-night-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-mung-den-voi-lop-hoc-de-cao-thuc-luc-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Black as Night
+             Chào mừng đến với lớp học đề cao thực lực (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Black as Night
+             Classroom of the Elite Season 2
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             4 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1807,18 +1807,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/trai-giam-kieu-my-phan-1" title="Trại Giam Kiểu Mỹ (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-o-rap-chieu-bong-ngoai-troi" title="Giáng sinh ở rạp chiếu bóng ngoài trời">
            <span class="status">
-            HD 720p Vietsub
+            Vietsub - HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trai-giam-kiem-my-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-o-rap-chieu-bong-ngoai-troi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Trại Giam Kiểu Mỹ (Phần 1)
+             Giáng sinh ở rạp chiếu bóng ngoài trời
             </span>
             <span class="list-top-movie-item-en">
-             Orange Is The New Black (Season 1)
+             Christmas at the Drive-In
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nu-nhan-vien-xinh-dep-va-ga-sep-bien-thai" title="Nữ Nhân Viên Xinh Đẹp Và Gã Sếp Biến Thái">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-nhan-vien-xinh-dep-va-ga-sep-bien-thai-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nữ Nhân Viên Xinh Đẹp Và Gã Sếp Biến Thái
+            </span>
+            <span class="list-top-movie-item-en">
+             풍만한 장모님의 흠뻑 젖은 그곳
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1829,18 +1851,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ngai-cao-tuyet-voi" title="Ngài Cáo Tuyệt Vời">
+          <a class="list-top-movie-link" href="/phim-moi/fate-zero-phan-1" title="Fate/Zero (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngai-cao-tuyet-voi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fatezero-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Ngài Cáo Tuyệt Vời
+             Fate/Zero (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Fantastic Mr. Fox
+             Fate/Zero (Season 1)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,43 +1873,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-bear-phan-2" title="The Bear (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/huong-mat-tua-khoi-suong" title="Hương mật tựa khói sương">
            <span class="status">
-            HD Vietsub
+            HD Vietsub + Thuyết minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-bear-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huong-mat-tua-khoi-suong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             The Bear (Phần 2)
+             Hương mật tựa khói sương
             </span>
             <span class="list-top-movie-item-en">
-             The Bear (Season 2)
+             Ashes of Love
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dai-tan-de-quoc-chi-thien-ha" title="Đại Tần Đế Quốc: Chí thiên hạ">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-tan-de-quoc-chi-thien-ha-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đại Tần Đế Quốc: Chí thiên hạ
-            </span>
-            <span class="list-top-movie-item-en">
-             Qin Empire: Alliance
-            </span>
-            <span class="list-top-movie-item-view">
-             7 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
