--- a/xem-phim-moi/thi-the-bi-bo-roi/index.html
+++ b/xem-phim-moi/thi-the-bi-bo-roi/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             6
+             7
             </dd>
             <br/>
            </dl>
@@ -1728,28 +1728,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
-           <span class="status">
-            FHD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Thiếu Niên Ca Hành
-            </span>
-            <span class="list-top-movie-item-en">
-             The Blood of Youth
-            </span>
-            <span class="list-top-movie-item-view">
-             51 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
           <a class="list-top-movie-link" href="/phim-moi/angel-guts-red-classroom" title="Angel Guts: Red Classroom">
            <span class="status">
             HD Vietsub
@@ -1762,6 +1740,28 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             </span>
             <span class="list-top-movie-item-en">
              Angel Guts: Red Classroom
+            </span>
+            <span class="list-top-movie-item-view">
+             51 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-nien-ca-hanh" title="Thiếu Niên Ca Hành">
+           <span class="status">
+            FHD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-nien-ca-hanh-2022-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Thiếu Niên Ca Hành
+            </span>
+            <span class="list-top-movie-item-en">
+             The Blood of Youth
             </span>
             <span class="list-top-movie-item-view">
              51 lượt xem
@@ -1785,18 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chao-mung-den-voi-lop-hoc-de-cao-thuc-luc-phan-2" title="Chào mừng đến với lớp học đề cao thực lực (Phần 2)">
+          <a class="list-top-movie-link" href="/phim-moi/leviathan" title="Leviathan">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-mung-den-voi-lop-hoc-de-cao-thuc-luc-phan-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/leviathan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chào mừng đến với lớp học đề cao thực lực (Phần 2)
+             Leviathan
             </span>
             <span class="list-top-movie-item-en">
-             Classroom of the Elite Season 2
+             Leviathan
             </span>
             <span class="list-top-movie-item-view">
              4 lượt xem
@@ -1807,18 +1807,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giang-sinh-o-rap-chieu-bong-ngoai-troi" title="Giáng sinh ở rạp chiếu bóng ngoài trời">
+          <a class="list-top-movie-link" href="/phim-moi/hoc-vien-sieu-anh-hung-memories" title="Học Viện Siêu Anh Hùng: Memories">
            <span class="status">
-            Vietsub - HD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giang-sinh-o-rap-chieu-bong-ngoai-troi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoc-vien-sieu-anh-hung-memories-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giáng sinh ở rạp chiếu bóng ngoài trời
+             Học Viện Siêu Anh Hùng: Memories
             </span>
             <span class="list-top-movie-item-en">
-             Christmas at the Drive-In
+             Boku no Hero Academia: Memories
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1829,18 +1829,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-nhan-vien-xinh-dep-va-ga-sep-bien-thai" title="Nữ Nhân Viên Xinh Đẹp Và Gã Sếp Biến Thái">
+          <a class="list-top-movie-link" href="/phim-moi/than-tuong-chau-au" title="Thần Tượng Châu Âu">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-nhan-vien-xinh-dep-va-ga-sep-bien-thai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/than-tuong-chau-au-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nữ Nhân Viên Xinh Đẹp Và Gã Sếp Biến Thái
+             Thần Tượng Châu Âu
             </span>
             <span class="list-top-movie-item-en">
-             풍만한 장모님의 흠뻑 젖은 그곳
+             Madagascar 3: Europe's Most Wanted
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/nuoc-my-mot-thoi" title="Nước Mỹ Một Thời">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nuoc-my-mot-thoi-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nước Mỹ Một Thời
+            </span>
+            <span class="list-top-movie-item-en">
+             Once Upon a Time in America
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,40 +1873,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/fate-zero-phan-1" title="Fate/Zero (Phần 1)">
+          <a class="list-top-movie-link" href="/phim-moi/chay-dau-cho-thoat" title="Chạy Đâu Cho Thoát">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/fatezero-phan-1-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chay-dau-cho-thoat-phim-bo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Fate/Zero (Phần 1)
+             Chạy Đâu Cho Thoát
             </span>
             <span class="list-top-movie-item-en">
-             Fate/Zero (Season 1)
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/huong-mat-tua-khoi-suong" title="Hương mật tựa khói sương">
-           <span class="status">
-            HD Vietsub + Thuyết minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huong-mat-tua-khoi-suong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hương mật tựa khói sương
-            </span>
-            <span class="list-top-movie-item-en">
-             Ashes of Love
+             You're All Surrounded
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
